Rename new components sticky-header, btn-link, site-content__header-button

--- a/edit/what.html
+++ b/edit/what.html
@@ -871,7 +871,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                   <button
                                                     data-testid="CONCEPT_REFINEMENT_0-disclosure-row"
                                                     type="button"
-                                                    class="_u1thwpg"
+                                                    class="btn-link-xs"
                                                     id="open-modal-options-m"
                                                   >
                                                     <span class="account-container-mb__menu-btn-wrapper">
@@ -948,7 +948,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                   <button
                                                     data-testid="CONCEPT_REFINEMENT_1-disclosure-row"
                                                     type="button"
-                                                    class="_u1thwpg"
+                                                    class="btn-link-xs"
                                                   >
                                                     <span class="account-container-mb__menu-btn-wrapper">
                                                       <div
