--- a/landing-pages/full-screen-hero.html
+++ b/landing-pages/full-screen-hero.html
@@ -1271,7 +1271,7 @@
                                       >
                                         <a
                                           href="/get-help-hosting"
-                                          class="_108mstlv"
+                                          class="site-content__header-button"
                                           ><span class="btn-mask-image dir dir-ltr"
                                             ><span
                                               class="btn-background-image dir dir-ltr"
