--- a/listings-product/contact-host-message.html
+++ b/listings-product/contact-host-message.html
@@ -138,17 +138,17 @@
                                                           --pricing-guest-primary-line-qualifier-line-height: 20px;
                                                         "
                                                       >
-                                                        <div class="_ati8ih">
-                                                          <span class="_14y1gc"
+                                                        <div class="sticky-header__action-title">
+                                                          <span class="sticky-header__action-title-inner"
                                                             ><div
-                                                              class="_1jo4hgw"
+                                                              class="sticky-header__action-title-text"
                                                               aria-hidden="true"
                                                             >
                                                               <span
-                                                                class="_tyxjp1"
+                                                                class="sticky-header__action-text-highlighted"
                                                                 >₱49,950</span
                                                               ><span
-                                                                class="_r1nvod"
+                                                                class="sticky-header__action-text"
                                                                 >&nbsp;night</span
                                                               >
                                                             </div>
