--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -5806,14 +5806,14 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                               data-section-id="NAV_DEFAULT"
                                               style="display: contents"
                                             >
-                                              <div class="_17twi95">
-                                                <div class="_yauuy6">
+                                              <div class="sticky-header__left">
+                                                <div class="sticky-header__nav">
                                                   <div class="main-content__details-cancel-button-text">
                                                     <button
                                                       type="button"
                                                       class="link"
                                                     >
-                                                      <div class="_11g6x33">
+                                                      <div class="sticky-header__nav-link-text">
                                                         Photos
                                                       </div>
                                                     </button>
@@ -5823,7 +5823,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       type="button"
                                                       class="link"
                                                     >
-                                                      <div class="_11g6x33">
+                                                      <div class="sticky-header__nav-link-text">
                                                         Amenities
                                                       </div>
                                                     </button>
@@ -5833,7 +5833,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       type="button"
                                                       class="link"
                                                     >
-                                                      <div class="_11g6x33">
+                                                      <div class="sticky-header__nav-link-text">
                                                         Reviews
                                                       </div>
                                                     </button>
@@ -5843,7 +5843,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       type="button"
                                                       class="link"
                                                     >
-                                                      <div class="_11g6x33">
+                                                      <div class="sticky-header__nav-link-text">
                                                         Location
                                                       </div>
                                                     </button>
@@ -5861,13 +5861,13 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                               style="display: contents"
                                             >
                                               <div class="relative">
-                                                <div class="_xkkzkj">
+                                                <div class="sticky-header__right">
                                                   <div class="_14ukjft">
                                                     <div
-                                                      class="_1fxck3d"
+                                                      class="sticky-header__action-inner"
                                                       data-testid="book-it-default"
                                                     >
-                                                      <div class="_ixddx0">
+                                                      <div class="sticky-header__action-left">
                                                         <div
                                                           style="
                                                             --pricing-guest-display-price-alignment: flex-start;
@@ -5944,7 +5944,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                               class="account-container-mb__menu-btn"
                                                             >
                                                               <span
-                                                                class="_1qx9l5ba"
+                                                                class="btn-link__muted"
                                                                 >134
                                                                 reviews</span
                                                               >
