--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -4292,7 +4292,7 @@
                                                                 </label></div>
                                                             </div>
                                                             <div class="_17kv4a0"><button type="button"
-                                                                class="_u1thwpg">Cancel</button></div>
+                                                                class="btn-link-xs">Cancel</button></div>
                                                           </div>
                                                           <div class="_1sjb883">
                                                             <div class="_a38ckr">Add a place to the map</div>
@@ -6914,7 +6914,7 @@
                                         <div class="flex-before-after dir dir-ltr">
                                           <div data-plugin-in-point-id="NAV_DEFAULT" data-section-id="NAV_DEFAULT"
                                             style="display: contents">
-                                            <div class="_17twi95">
+                                            <div class="sticky-header__left">
                                               <div class="_3rjack"><a href="/" aria-label="Airbnb homepage">
                                                   <svg viewBox="0 0 1025 456" role="img" aria-label="Airbnb Plus"
                                                     focusable="false" height="32">
@@ -6935,31 +6935,31 @@
                                                       d="m1003.6 282.1c4.81 10.7-0.58 23.83-6.109 30.944-10.294 13.216-27.149 13.219-32.266 13.506-17.455 0.977-32.541-9.026-36.388-23.697-3.017-11.522 3.768-23.667-1.595-26.845-0.616-0.343-1.301-0.543-2.005-0.584-5.972-0.145-10.024 9.761-11.549 14.871-1.994 7.136-2.068 14.671-0.217 21.846 1.852 7.174 5.565 13.733 10.764 19.015 24.907 23.09 73.159 16.436 91.085-9.031 5.56-8.364 8.65-18.121 8.93-28.158 0.18-8.507-2.23-16.868-6.92-23.97-17.483-25.133-62.141-17.24-62.257-39.604-0.08-10.297 10.364-17.827 19.714-21.018 19.612-6.649 34.783-3.274 29.963 6.493-0.83 1.68-1.52 3.426-2.06 5.221-2.842 8.455 10.28 16.351 18.68-0.618 1.79-3.43 2.51-7.311 2.09-11.154-0.42-3.842-1.97-7.475-4.45-10.441-5.28-6.47-19.783-11.681-39.886-8.586-23.246 3.553-43.437 17.065-42.265 43.449 0.168 3.828 1.085 7.586 2.699 11.061 12.091 24.797 54.265 15.607 64.042 37.3z">
                                                     </path>
                                                   </svg></a></div>
-                                              <div class="_yauuy6">
+                                              <div class="sticky-header__nav">
                                                 <div class="main-content__details-cancel-button-text">
                                                   <button type="button" class="link">
-                                                    <div class="_11g6x33">
+                                                    <div class="sticky-header__nav-link-text">
                                                       Photos
                                                     </div>
                                                   </button>
                                                 </div>
                                                 <div class="main-content__details-cancel-button-text">
                                                   <button type="button" class="link">
-                                                    <div class="_11g6x33">
+                                                    <div class="sticky-header__nav-link-text">
                                                       Amenities
                                                     </div>
                                                   </button>
                                                 </div>
                                                 <div class="main-content__details-cancel-button-text">
                                                   <button type="button" class="link">
-                                                    <div class="_11g6x33">
+                                                    <div class="sticky-header__nav-link-text">
                                                       Reviews
                                                     </div>
                                                   </button>
                                                 </div>
                                                 <div class="main-content__details-cancel-button-text">
                                                   <button type="button" class="link">
-                                                    <div class="_11g6x33">
+                                                    <div class="sticky-header__nav-link-text">
                                                       Location
                                                     </div>
                                                   </button>
@@ -6972,10 +6972,10 @@
                                           <div data-plugin-in-point-id="BOOK_IT_NAV" data-section-id="BOOK_IT_NAV"
                                             style="display: contents">
                                             <div class="relative">
-                                              <div class="_xkkzkj">
+                                              <div class="sticky-header__right">
                                                 <div class="_14ukjft">
-                                                  <div class="_1fxck3d" data-testid="book-it-default">
-                                                    <div class="_ixddx0">
+                                                  <div class="sticky-header__action-inner" data-testid="book-it-default">
+                                                    <div class="sticky-header__action-left">
                                                       <div style="
                                                             --pricing-guest-display-price-alignment: flex-start;
                                                             --pricing-guest-display-price-flex-wrap: nowrap;
@@ -7023,7 +7023,7 @@
                                                             aria-hidden="true">4.97 ·</span><button
                                                             aria-label="Rated 4.97 out of 5 from 134 reviews."
                                                             type="button" class="account-container-mb__menu-btn">
-                                                            <span class="_1qx9l5ba">134
+                                                            <span class="btn-link__muted">134
                                                               reviews</span>
                                                           </button></span>
                                                       </div>
@@ -12206,7 +12206,7 @@
                                                                   ·</span><button
                                                                   aria-label="Rated 4.97 out of 5 from 134 reviews."
                                                                   type="button" class="account-container-mb__menu-btn">
-                                                                  <span class="_1qx9l5ba">134
+                                                                  <span class="btn-link__muted">134
                                                                     reviews</span>
                                                                 </button></span>
                                                             </div>
@@ -14279,7 +14279,7 @@
                                                               </label></div>
                                                           </div>
                                                           <div class="_17kv4a0"><button type="button"
-                                                              class="_u1thwpg">Cancel</button></div>
+                                                              class="btn-link-xs">Cancel</button></div>
                                                         </div>
                                                         <div class="_1sjb883">
                                                           <div class="_a38ckr">Add a place to the map</div>
@@ -24318,10 +24318,10 @@
                       --pricing-guest-primary-line-qualifier-font-size: 16px;
                       --pricing-guest-primary-line-qualifier-line-height: 20px;
                     ">
-                                <div class="_ati8ih">
-                                  <span class="_14y1gc">
-                                    <div class="_1jo4hgw" aria-hidden="true"><span class="_tyxjp1">₱452,930</span><span
-                                        class="_r1nvod">&nbsp;night</span></div>
+                                <div class="sticky-header__action-title">
+                                  <span class="sticky-header__action-title-inner">
+                                    <div class="sticky-header__action-title-text" aria-hidden="true"><span class="sticky-header__action-text-highlighted">₱452,930</span><span
+                                        class="sticky-header__action-text">&nbsp;night</span></div>
                                     <span class="visually-hidden dir dir-ltr">₱452,930 per night</span>
                                   </span>
                                 </div>
@@ -24382,12 +24382,12 @@
   <script>
     document.addEventListener('scroll', () => {
       window.scrollY > 600
-        ? document.querySelector('._1zeg3u')?.classList.replace('_1zeg3u', '_6gzg21')
-        : document.querySelector('._6gzg21')?.classList.replace('_6gzg21', '_1zeg3u')
+        ? document.querySelector('._1zeg3u')?.classList.replace('_1zeg3u', 'sticky-header')
+        : document.querySelector('.sticky-header')?.classList.replace('sticky-header', '_1zeg3u')
 
       window.scrollY > 2500
-        ? document.querySelector('._14ukjft')?.classList.replace('_14ukjft', '_15tm0yy3')
-        : document.querySelector('._15tm0yy3')?.classList.replace('_15tm0yy3', '_14ukjft')
+        ? document.querySelector('._14ukjft')?.classList.replace('_14ukjft', 'sticky-header__action')
+        : document.querySelector('.sticky-header__action')?.classList.replace('sticky-header__action', '_14ukjft')
     });
   </script>
 </body>
