--- a/listings-product/products-mobile.html
+++ b/listings-product/products-mobile.html
@@ -17711,13 +17711,13 @@
                                   <div class="_754m05">
                                     <div
                                       style="--pricing-guest-display-price-alignment:flex-start; --pricing-guest-display-price-flex-wrap:wrap; --pricing-guest-primary-line-font-size:18px; --pricing-guest-primary-line-line-height:24px; --pricing-guest-primary-line-unit-price-font-weight:600; --pricing-guest-primary-line-trailing-content-font-size:14px; --pricing-guest-secondary-line-font-size:14px; --pricing-guest-secondary-line-line-height:18px; --pricing-guest-secondary-line-color:#717171; --pricing-guest-explanation-disclaimer-font-size:14px; --pricing-guest-explanation-disclaimer-line-height:18px; --pricing-guest-primary-line-strikethrough-price-font-weight:600; --pricing-guest-primary-line-qualifier-font-size:14px; --pricing-guest-primary-line-qualifier-line-height:18px;">
-                                      <div class="_ati8ih"><span class="_14y1gc">
-                                          <div class="_1jo4hgw" aria-hidden="true"><span
-                                              class="_tyxjp1">₱49,950</span><span class="_r1nvod">&nbsp;night</span>
+                                      <div class="sticky-header__action-title"><span class="sticky-header__action-title-inner">
+                                          <div class="sticky-header__action-title-text" aria-hidden="true"><span
+                                              class="sticky-header__action-text-highlighted">₱49,950</span><span class="sticky-header__action-text">&nbsp;night</span>
                                           </div><span class="visually-hidden dir dir-ltr">₱49,950 per night</span>
                                         </span></div>
                                     </div>
-                                    <div class="_176k0ns"><span class="_1pg77l15"><span class="_9qqdp4"
+                                    <div class="sticky-header__action-subtitle"><span class="sticky-header__action-subtitle-inner"><span class="sticky-header__action-icon"
                                           style="font-size: 10px;"><svg viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                             focusable="false"
@@ -17725,7 +17725,7 @@
                                             <path
                                               d="M15.094 1.579l-4.124 8.885-9.86 1.27a1 1 0 0 0-.542 1.736l7.293 6.565-1.965 9.852a1 1 0 0 0 1.483 1.061L16 25.951l8.625 4.997a1 1 0 0 0 1.482-1.06l-1.965-9.853 7.293-6.565a1 1 0 0 0-.541-1.735l-9.86-1.271-4.127-8.885a1 1 0 0 0-1.814 0z"
                                               fill-rule="evenodd"></path>
-                                          </svg></span><span class="_12si43g" aria-hidden="true">4.97</span><span
+                                          </svg></span><span class="sticky-header__action-subtitle-text" aria-hidden="true">4.97</span><span
                                           class="visually-hidden dir dir-ltr">Rated 4.97 out of 5 from 139
                                           reviews.</span></span></div>
                                   </div>
