--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -541,7 +541,7 @@
                                           <div class="place__nearby-card-spacer dir dir-ltr">
                                             <div style="--pricing-guest-display-price-alignment:flex-start; --pricing-guest-display-price-flex-wrap:wrap; --pricing-guest-primary-line-font-size:var(--font-size); --pricing-guest-primary-line-line-height:var(--line-height-md); --pricing-guest-primary-line-unit-price-font-weight:800; --pricing-guest-primary-line-trailing-content-font-size:14px; --pricing-guest-secondary-line-font-size:14px; --pricing-guest-secondary-line-line-height:18px; --pricing-guest-secondary-line-color:#717171; --pricing-guest-explanation-disclaimer-font-size:14px; --pricing-guest-explanation-disclaimer-line-height:18px; --pricing-guest-primary-line-strikethrough-price-font-weight:600; --pricing-guest-primary-line-qualifier-font-size:var(--font-size); --pricing-guest-primary-line-qualifier-line-height:var(--line-height-md);">
                                               <div class="place__nearby-card-pricing">
-                                                <span class="_14y1gc">
+                                                <span class="sticky-header__action-title-inner">
                                                   <div class="pricing__info" aria-hidden="true">
                                                     <span class="pricing__unit-price">
                                                       ₱2,431</span>
@@ -823,7 +823,7 @@
                                           <div class="place__nearby-card-spacer dir dir-ltr">
                                             <div style="--pricing-guest-display-price-alignment:flex-start; --pricing-guest-display-price-flex-wrap:wrap; --pricing-guest-primary-line-font-size:var(--font-size); --pricing-guest-primary-line-line-height:var(--line-height-md); --pricing-guest-primary-line-unit-price-font-weight:800; --pricing-guest-primary-line-trailing-content-font-size:14px; --pricing-guest-secondary-line-font-size:14px; --pricing-guest-secondary-line-line-height:18px; --pricing-guest-secondary-line-color:#717171; --pricing-guest-explanation-disclaimer-font-size:14px; --pricing-guest-explanation-disclaimer-line-height:18px; --pricing-guest-primary-line-strikethrough-price-font-weight:600; --pricing-guest-primary-line-qualifier-font-size:var(--font-size); --pricing-guest-primary-line-qualifier-line-height:var(--line-height-md);">
                                               <div class="place__nearby-card-pricing">
-                                                <span class="_14y1gc">
+                                                <span class="sticky-header__action-title-inner">
                                                   <div class="pricing__info" aria-hidden="true">
                                                     <span class="pricing__unit-price">
                                                       ₱57,002</span>
@@ -6534,7 +6534,7 @@
                                        </label>
                                       </div>
                                      </div>
-                                     <div class="_17kv4a0"><button type="button" class="_u1thwpg" id="cancel-pin">Cancel</button></div>
+                                     <div class="_17kv4a0"><button type="button" class="btn-link-xs" id="cancel-pin">Cancel</button></div>
                                     </div>
                                     <div class="_1sjb883">
                                      <div class="_a38ckr">Add a place to the map</div>
