--- a/become-a-host/description.html
+++ b/become-a-host/description.html
@@ -609,7 +609,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
                         <div class="_zi5yix">
                          <div class="_6af2u">
                           <span class="_ov76iq">
-                           <button aria-label="Select to open user profile for Myrna" type="button" class="_u1thwpg"><span class="_2rujrq">Myrna</span></button>
+                           <button aria-label="Select to open user profile for Myrna" type="button" class="btn-link-xs"><span class="_2rujrq">Myrna</span></button>
                           </span>
                           <span class="_c43lne">10:47 PM</span>
                          </div>
@@ -829,7 +829,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
                         <div class="_zi5yix">
                          <div class="_6af2u">
                           <span class="_ov76iq">
-                           <button aria-label="Select to open user profile for Myrna" type="button" class="_u1thwpg"><span class="_2rujrq">Myrna</span></button>
+                           <button aria-label="Select to open user profile for Myrna" type="button" class="btn-link-xs"><span class="_2rujrq">Myrna</span></button>
                           </span>
                           <span class="_c43lne">10:47 PM</span>
                          </div>
