--- a/become-a-host/title.html
+++ b/become-a-host/title.html
@@ -602,7 +602,7 @@ Cheerful private villa with pool</textarea
                         <div class="_zi5yix">
                          <div class="_6af2u">
                           <span class="_ov76iq">
-                           <button aria-label="Select to open user profile for Myrna" type="button" class="_u1thwpg"><span class="_2rujrq">Myrna</span></button>
+                           <button aria-label="Select to open user profile for Myrna" type="button" class="btn-link-xs"><span class="_2rujrq">Myrna</span></button>
                           </span>
                           <span class="_c43lne">10:47 PM</span>
                          </div>
@@ -821,7 +821,7 @@ Cheerful private villa with pool</textarea
                         <div class="_zi5yix">
                          <div class="_6af2u">
                           <span class="_ov76iq">
-                           <button aria-label="Select to open user profile for Myrna" type="button" class="_u1thwpg"><span class="_2rujrq">Myrna</span></button>
+                           <button aria-label="Select to open user profile for Myrna" type="button" class="btn-link-xs"><span class="_2rujrq">Myrna</span></button>
                           </span>
                           <span class="_c43lne">10:47 PM</span>
                          </div>
