--- a/listings-product/products-plus.html
+++ b/listings-product/products-plus.html
@@ -5141,7 +5141,7 @@
                                       <div class="flex-before-after dir dir-ltr">
                                         <div data-plugin-in-point-id="NAV_DEFAULT" data-section-id="NAV_DEFAULT"
                                           style="display: contents;">
-                                          <div class="_17twi95">
+                                          <div class="sticky-header__left">
                                             <div class="_3rjack"><a href="/" aria-label="Airbnb homepage">
                                                 <svg viewBox="0 0 1025 456" role="img" aria-label="Airbnb Plus"
                                                   focusable="false" height="32">
@@ -5162,24 +5162,24 @@
                                                     d="m1003.6 282.1c4.81 10.7-0.58 23.83-6.109 30.944-10.294 13.216-27.149 13.219-32.266 13.506-17.455 0.977-32.541-9.026-36.388-23.697-3.017-11.522 3.768-23.667-1.595-26.845-0.616-0.343-1.301-0.543-2.005-0.584-5.972-0.145-10.024 9.761-11.549 14.871-1.994 7.136-2.068 14.671-0.217 21.846 1.852 7.174 5.565 13.733 10.764 19.015 24.907 23.09 73.159 16.436 91.085-9.031 5.56-8.364 8.65-18.121 8.93-28.158 0.18-8.507-2.23-16.868-6.92-23.97-17.483-25.133-62.141-17.24-62.257-39.604-0.08-10.297 10.364-17.827 19.714-21.018 19.612-6.649 34.783-3.274 29.963 6.493-0.83 1.68-1.52 3.426-2.06 5.221-2.842 8.455 10.28 16.351 18.68-0.618 1.79-3.43 2.51-7.311 2.09-11.154-0.42-3.842-1.97-7.475-4.45-10.441-5.28-6.47-19.783-11.681-39.886-8.586-23.246 3.553-43.437 17.065-42.265 43.449 0.168 3.828 1.085 7.586 2.699 11.061 12.091 24.797 54.265 15.607 64.042 37.3z">
                                                   </path>
                                                 </svg></a></div>
-                                            <div class="_yauuy6">
-                                              <div class="_14f4nnk"><button type="button" class="link">
-                                                  <div class="_11g6x33">Photos</div>
+                                            <div class="sticky-header__nav">
+                                              <div class="sticky-header__nav-item"><button type="button" class="link">
+                                                  <div class="sticky-header__nav-link-text">Photos</div>
                                                 </button>
                                               </div>
-                                              <div class="_14f4nnk">
+                                              <div class="sticky-header__nav-item">
                                                 <button type="button" class="link">
-                                                  <div class="_11g6x33">Amenities</div>
+                                                  <div class="sticky-header__nav-link-text">Amenities</div>
                                                 </button>
                                               </div>
-                                              <div class="_14f4nnk">
+                                              <div class="sticky-header__nav-item">
                                                 <button type="button" class="link">
-                                                  <div class="_11g6x33">Reviews</div>
+                                                  <div class="sticky-header__nav-link-text">Reviews</div>
                                                 </button>
                                               </div>
-                                              <div class="_14f4nnk">
+                                              <div class="sticky-header__nav-item">
                                                 <button type="button" class="link">
-                                                  <div class="_11g6x33">Location</div>
+                                                  <div class="sticky-header__nav-link-text">Location</div>
                                                 </button>
                                               </div>
                                             </div>
@@ -5190,25 +5190,25 @@
                                         <div data-plugin-in-point-id="BOOK_IT_NAV" data-section-id="BOOK_IT_NAV"
                                           style="display: contents;">
                                           <div class="relative">
-                                            <div class="_xkkzkj">
-                                              <div class="_15tm0yy3">
-                                                <div class="_1fxck3d" data-testid="book-it-default">
-                                                  <div class="_ixddx0">
+                                            <div class="sticky-header__right">
+                                              <div class="sticky-header__action">
+                                                <div class="sticky-header__action-inner" data-testid="book-it-default">
+                                                  <div class="sticky-header__action-left">
                                                     <div
                                                       style="--pricing-guest-display-price-alignment:flex-start; --pricing-guest-display-price-flex-wrap:nowrap; --pricing-guest-primary-line-font-size:18px; --pricing-guest-primary-line-line-height:24px; --pricing-guest-primary-line-unit-price-font-weight:600; --pricing-guest-primary-line-trailing-content-font-size:14px; --pricing-guest-secondary-line-font-size:14px; --pricing-guest-secondary-line-line-height:18px; --pricing-guest-secondary-line-color:#717171; --pricing-guest-explanation-disclaimer-font-size:14px; --pricing-guest-explanation-disclaimer-line-height:18px; --pricing-guest-primary-line-strikethrough-price-font-weight:600; --pricing-guest-primary-line-qualifier-font-size:14px; --pricing-guest-primary-line-qualifier-line-height:18px;">
-                                                      <div class="_ati8ih">
-                                                        <span class="_14y1gc">
-                                                          <div class="_1jo4hgw" aria-hidden="true">
-                                                            <span class="_tyxjp1">₱44,974</span><span
-                                                              class="_r1nvod">&nbsp;night</span>
+                                                      <div class="sticky-header__action-title">
+                                                        <span class="sticky-header__action-title-inner">
+                                                          <div class="sticky-header__action-title-text" aria-hidden="true">
+                                                            <span class="sticky-header__action-text-highlighted">₱44,974</span><span
+                                                              class="sticky-header__action-text">&nbsp;night</span>
                                                           </div>
                                                           <span class="visually-hidden dir dir-ltr">₱44,974 per night</span>
                                                         </span>
                                                       </div>
                                                     </div>
-                                                    <div class="_176k0ns">
-                                                      <span class="_1pg77l15">
-                                                        <span class="_9qqdp4" style="font-size: 10px;">
+                                                    <div class="sticky-header__action-subtitle">
+                                                      <span class="sticky-header__action-subtitle-inner">
+                                                        <span class="sticky-header__action-icon" style="font-size: 10px;">
                                                           <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                             aria-hidden="true" role="presentation" focusable="false"
                                                             style="display: block; height: 10px; width: 10px; fill: currentcolor;">
@@ -5217,17 +5217,17 @@
                                                               fill-rule="evenodd"></path>
                                                           </svg>
                                                         </span>
-                                                        <span class="_12si43g" aria-hidden="true">5.0 ·</span>
+                                                        <span class="sticky-header__action-subtitle-text" aria-hidden="true">5.0 ·</span>
                                                         <button aria-label="Rated 5.0 out of 5 from 104 reviews."
-                                                          type="button" class="_u1thwpg">
-                                                          <span class="_1qx9l5ba">104 reviews</span>
+                                                          type="button" class="btn-link-xs">
+                                                          <span class="btn-link__muted">104 reviews</span>
                                                         </button>
                                                       </span>
                                                     </div>
                                                   </div>
                                                   <div class="products-container__book-it-default">
                                                     <div class=" dir dir-ltr"><button data-testid="homes-pdp-cta-btn"
-                                                        type="button" class="_108mstlv"><span
+                                                        type="button" class="site-content__header-button"><span
                                                           class="btn-mask-image dir dir-ltr"><span class="btn-background-image dir dir-ltr"
                                                             style="background-position: calc((100 - var(--mouse-x, 0)) * 1%) calc((100 - var(--mouse-y, 0)) * 1%);"></span></span><span
                                                           class="btn-text dir dir-ltr">Check availability
@@ -5989,32 +5989,32 @@
                                         <div class="flex-before-after dir dir-ltr">
                                           <div data-plugin-in-point-id="NAV_DEFAULT" data-section-id="NAV_DEFAULT"
                                             style="display: contents">
-                                            <div class="_17twi95">
-                                              <div class="_yauuy6">
+                                            <div class="sticky-header__left">
+                                              <div class="sticky-header__nav">
                                                 <div class="main-content__details-cancel-button-text">
                                                   <button type="button" class="link">
-                                                    <div class="_11g6x33">
+                                                    <div class="sticky-header__nav-link-text">
                                                       Photos
                                                     </div>
                                                   </button>
                                                 </div>
                                                 <div class="main-content__details-cancel-button-text">
                                                   <button type="button" class="link">
-                                                    <div class="_11g6x33">
+                                                    <div class="sticky-header__nav-link-text">
                                                       Amenities
                                                     </div>
                                                   </button>
                                                 </div>
                                                 <div class="main-content__details-cancel-button-text">
                                                   <button type="button" class="link">
-                                                    <div class="_11g6x33">
+                                                    <div class="sticky-header__nav-link-text">
                                                       Reviews
                                                     </div>
                                                   </button>
                                                 </div>
                                                 <div class="main-content__details-cancel-button-text">
                                                   <button type="button" class="link">
-                                                    <div class="_11g6x33">
+                                                    <div class="sticky-header__nav-link-text">
                                                       Location
                                                     </div>
                                                   </button>
@@ -6027,10 +6027,10 @@
                                           <div data-plugin-in-point-id="BOOK_IT_NAV" data-section-id="BOOK_IT_NAV"
                                             style="display: contents">
                                             <div class="relative">
-                                              <div class="_xkkzkj">
+                                              <div class="sticky-header__right">
                                                 <div class="_14ukjft">
-                                                  <div class="_1fxck3d" data-testid="book-it-default">
-                                                    <div class="_ixddx0">
+                                                  <div class="sticky-header__action-inner" data-testid="book-it-default">
+                                                    <div class="sticky-header__action-left">
                                                       <div style="
                                                             --pricing-guest-display-price-alignment: flex-start;
                                                             --pricing-guest-display-price-flex-wrap: nowrap;
@@ -6078,7 +6078,7 @@
                                                             aria-hidden="true">4.97 ·</span><button
                                                             aria-label="Rated 4.97 out of 5 from 134 reviews."
                                                             type="button" class="account-container-mb__menu-btn">
-                                                            <span class="_1qx9l5ba">134
+                                                            <span class="btn-link__muted">134
                                                               reviews</span>
                                                           </button></span>
                                                       </div>
@@ -11082,7 +11082,7 @@
                                                                   ·</span><button
                                                                   aria-label="Rated 4.97 out of 5 from 134 reviews."
                                                                   type="button" class="account-container-mb__menu-btn">
-                                                                  <span class="_1qx9l5ba">134
+                                                                  <span class="btn-link__muted">134
                                                                     reviews</span>
                                                                 </button></span>
                                                             </div>
