--- a/listings-product/specific_trip.html
+++ b/listings-product/specific_trip.html
@@ -6529,7 +6529,7 @@
                                                             </div>
                                                           </button></div>
                                                         <div class="_zi5yix">
-                                                          <div class="_6af2u"><span class="_ov76iq"><button aria-label="Select to open user profile for Jose Angelo" type="button" class="_u1thwpg"><span class="_2rujrq">Jose
+                                                          <div class="_6af2u"><span class="_ov76iq"><button aria-label="Select to open user profile for Jose Angelo" type="button" class="btn-link-xs"><span class="_2rujrq">Jose
                                                                   Angelo</span></button></span><span class="_c43lne">12:46 AM</span></div>
                                                           <div class="carousel-slider__item-wrap">
                                                             <div>
