--- a/loaders/messages-loader.html
+++ b/loaders/messages-loader.html
@@ -601,7 +601,7 @@
                                                           <div class="_zi5yix">
                                                             <div class="_6af2u"><span class="_ov76iq"><button
                                                                   aria-label="Select to open user profile for Jose Angelo"
-                                                                  type="button" class="_u1thwpg"><span
+                                                                  type="button" class="btn-link-xs"><span
                                                                     class="_2rujrq">Jose
                                                                     Angelo</span></button></span><span
                                                                 class="_c43lne">12:46 AM</span></div>
@@ -878,7 +878,7 @@
                                                           <div class="_zi5yix">
                                                             <div class="_6af2u"><span class="_ov76iq"><button
                                                                   aria-label="Select to open user profile for Myrna"
-                                                                  type="button" class="_u1thwpg"><span
+                                                                  type="button" class="btn-link-xs"><span
                                                                     class="_2rujrq">Myrna</span></button></span><span
                                                                 class="_c43lne">10:47 PM</span></div>
                                                             <div class="carousel-slider__item-wrap">
@@ -1140,7 +1140,7 @@
                                                           <div class="_zi5yix">
                                                             <div class="_6af2u"><span class="_ov76iq"><button
                                                                   aria-label="Select to open user profile for Kuniatsu (Host)"
-                                                                  type="button" class="_u1thwpg"><span
+                                                                  type="button" class="btn-link-xs"><span
                                                                     class="_2rujrq">Kuniatsu
                                                                     (Host)</span></button></span><span
                                                                 class="_c43lne">9:33 PM</span></div>
@@ -1435,7 +1435,7 @@
                                                           <div class="_zi5yix">
                                                             <div class="_6af2u"><span class="_ov76iq"><button
                                                                   aria-label="Select to open user profile for Jose Angelo"
-                                                                  type="button" class="_u1thwpg"><span
+                                                                  type="button" class="btn-link-xs"><span
                                                                     class="_2rujrq">Jose
                                                                     Angelo</span></button></span><span
                                                                 class="_c43lne">12:10 AM</span></div>
@@ -1536,7 +1536,7 @@
                                                           <div class="_zi5yix">
                                                             <div class="_6af2u"><span class="_ov76iq"><button
                                                                   aria-label="Select to open user profile for Adrian"
-                                                                  type="button" class="_u1thwpg"><span
+                                                                  type="button" class="btn-link-xs"><span
                                                                     class="_2rujrq">Adrian</span></button></span><span
                                                                 class="_c43lne">8:56 AM</span></div>
                                                             <div class="carousel-slider__item-wrap">
