--- a/loaders/products-loader.html
+++ b/loaders/products-loader.html
@@ -3033,14 +3033,14 @@
                                               data-section-id="NAV_DEFAULT"
                                               style="display: contents"
                                             >
-                                              <div class="_17twi95">
-                                                <div class="_yauuy6">
+                                              <div class="sticky-header__left">
+                                                <div class="sticky-header__nav">
                                                   <div class="main-content__details-cancel-button-text">
                                                     <button
                                                       type="button"
                                                       class="link"
                                                     >
-                                                      <div class="_11g6x33">
+                                                      <div class="sticky-header__nav-link-text">
                                                         Photos
                                                       </div>
                                                     </button>
@@ -3050,7 +3050,7 @@
                                                       type="button"
                                                       class="link"
                                                     >
-                                                      <div class="_11g6x33">
+                                                      <div class="sticky-header__nav-link-text">
                                                         Amenities
                                                       </div>
                                                     </button>
@@ -3060,7 +3060,7 @@
                                                       type="button"
                                                       class="link"
                                                     >
-                                                      <div class="_11g6x33">
+                                                      <div class="sticky-header__nav-link-text">
                                                         Reviews
                                                       </div>
                                                     </button>
@@ -3070,7 +3070,7 @@
                                                       type="button"
                                                       class="link"
                                                     >
-                                                      <div class="_11g6x33">
+                                                      <div class="sticky-header__nav-link-text">
                                                         Location
                                                       </div>
                                                     </button>
@@ -3088,13 +3088,13 @@
                                               style="display: contents"
                                             >
                                               <div class="relative">
-                                                <div class="_xkkzkj">
+                                                <div class="sticky-header__right">
                                                   <div class="_14ukjft">
                                                     <div
-                                                      class="_1fxck3d"
+                                                      class="sticky-header__action-inner"
                                                       data-testid="book-it-default"
                                                     >
-                                                      <div class="_ixddx0">
+                                                      <div class="sticky-header__action-left">
                                                         <div
                                                           style="
                                                             --pricing-guest-display-price-alignment: flex-start;
@@ -3171,7 +3171,7 @@
                                                               class="account-container-mb__menu-btn"
                                                             >
                                                               <span
-                                                                class="_1qx9l5ba"
+                                                                class="btn-link__muted"
                                                                 >134
                                                                 reviews</span
                                                               >
@@ -3615,7 +3615,7 @@
                                                                     class="account-container-mb__menu-btn"
                                                                   >
                                                                     <span
-                                                                      class="_1qx9l5ba"
+                                                                      class="btn-link__muted"
                                                                       >134
                                                                       reviews</span
                                                                     >
